# lysine-os

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-ribosome/: action.yml
.github/workflows/: bootstrap.yml  ci.yml  source-mirror.yml
configs/: features.conf  make.conf  mirrors.conf  ribosome.conf
docs/: architecture.md  build-guide.md  mRNA-reference.md
docs/development/: contributing.md
docs/ribosome-book/: cas-design.md  parser-design.md  sandbox-design.md  sprint1-mrna-packages.md
nucleus/: README.md
nucleus/core/acl/: 2.3.2.mRNA
nucleus/core/attr/: 2.5.2.mRNA
nucleus/core/autoconf/: 2.72.mRNA
nucleus/core/automake/: 1.17.mRNA
nucleus/core/bash/: 5.2.37.mRNA
nucleus/core/bc/: 1.08.2.mRNA
nucleus/core/binutils/: 2.42.mRNA
nucleus/core/bison/: 3.8.2.mRNA
nucleus/core/btrfs-progs/: 6.19.1.mRNA
nucleus/core/bzip2/: 1.0.8.mRNA
nucleus/core/cmake/: 3.31.0.mRNA
nucleus/core/coreutils/: 9.5.mRNA
nucleus/core/cross-binutils/: 2.42.mRNA
nucleus/core/cross-gcc/: 14.2.0.mRNA
nucleus/core/cross-glibc/: 2.39.4.mRNA  2.39.mRNA  2.43.mRNA
nucleus/core/cross-libstdcxx/: 14.2.0.mRNA
nucleus/core/dbus/: 1.14.10.mRNA
nucleus/core/diffutils/: 3.10.mRNA
nucleus/core/e2fsprogs/: 1.47.1.mRNA
nucleus/core/elfutils/: 0.192.mRNA
nucleus/core/expat/: 2.6.4.mRNA
nucleus/core/file/: 5.45.mRNA
nucleus/core/findutils/: 4.9.0.mRNA
nucleus/core/flex/: 2.6.4.mRNA
nucleus/core/gawk/: 5.3.0.mRNA
nucleus/core/gcc/: 14.2.0.mRNA
nucleus/core/gdbm/: 1.24.mRNA
nucleus/core/gettext/: 0.22.5.mRNA
nucleus/core/glibc/: 2.39.4.mRNA  2.39.mRNA  2.43.mRNA
nucleus/core/gmp/: 6.3.0.mRNA
nucleus/core/gnupg/: 2.4.5.mRNA
nucleus/core/gperf/: 3.1.mRNA
nucleus/core/grep/: 3.11.mRNA
nucleus/core/groff/: 1.23.0.mRNA
nucleus/core/grub/: 2.12.mRNA
nucleus/core/gzip/: 1.13.mRNA
nucleus/core/help2man/: 1.49.3.mRNA
nucleus/core/iana-etc/: 20241206.mRNA
nucleus/core/inetutils/: 2.5.mRNA
nucleus/core/iproute2/: 6.10.0.mRNA
nucleus/core/jinja2/: 3.1.4.mRNA
nucleus/core/kbd/: 2.6.12.mRNA  2.6.4.mRNA
nucleus/core/kmod/: 33.mRNA
nucleus/core/less/: 668.mRNA
nucleus/core/libarchive/: 3.7.7.mRNA
nucleus/core/libcap/: 2.70.mRNA
nucleus/core/libffi/: 3.4.6.mRNA
nucleus/core/libgcrypt/: 1.11.0.mRNA
nucleus/core/libgpg-error/: 1.50.mRNA
nucleus/core/libpipeline/: 1.5.8.mRNA
nucleus/core/libseccomp/: 2.5.5.mRNA
nucleus/core/libtool/: 2.5.3.mRNA
nucleus/core/libuv/: 1.49.2.mRNA
nucleus/core/libxcrypt/: 4.4.36.mRNA
nucleus/core/libxml2/: 2.13.5.mRNA
nucleus/core/linux-api-headers/: 6.18.0.mRNA  7.0.mRNA
nucleus/core/linux-kernel/: 6.18.0.mRNA  7.0.mRNA
nucleus/core/linux-pam/: 1.6.1.mRNA
nucleus/core/lz4/: 1.10.0.mRNA
nucleus/core/m4/: 1.4.19.mRNA
nucleus/core/make/: 4.4.1.mRNA
nucleus/core/mako/: 1.3.5.mRNA
nucleus/core/man-db/: 2.13.0.mRNA
nucleus/core/man-pages/: 6.9.1.mRNA
nucleus/core/markupsafe/: 2.1.5.mRNA
nucleus/core/meson/: 1.6.0.mRNA
nucleus/core/mpc/: 1.3.1.mRNA
nucleus/core/mpfr/: 4.2.1.mRNA
nucleus/core/ncurses/: 6.5.mRNA
nucleus/core/ninja/: 1.12.1.mRNA
nucleus/core/npth/: 1.7.mRNA
nucleus/core/openssh/: 9.9p1.mRNA
nucleus/core/openssl/: 3.4.0.mRNA
nucleus/core/patch/: 2.7.6.mRNA
nucleus/core/pcre2/: 10.44.mRNA
nucleus/core/perl/: 5.40.0.mRNA
nucleus/core/pkgconf/: 2.2.0.mRNA
nucleus/core/procps-ng/: 4.0.4.mRNA
nucleus/core/psmisc/: 23.7.mRNA
nucleus/core/python3/: 3.13.0.mRNA
nucleus/core/readline/: 8.2.13.mRNA
nucleus/core/sed/: 4.9.mRNA
nucleus/core/shadow/: 4.16.0.mRNA
nucleus/core/sudo/: 1.9.16.mRNA
nucleus/core/systemd/: 257.mRNA
nucleus/core/tar/: 1.35.mRNA
nucleus/core/texinfo/: 7.1.mRNA
nucleus/core/tzdata/: 2024b.mRNA
nucleus/core/util-linux/: 2.40.2.mRNA
nucleus/core/xz/: 5.6.2.mRNA
nucleus/core/zlib/: 1.3.1.mRNA
nucleus/core/zstd/: 1.5.6.mRNA
nucleus/desktop/pipewire/: 1.6.6.mRNA
ribosome/: Cargo.toml
ribosome/crates/lysin/: Cargo.toml
ribosome/crates/lysin/src/: config.rs  db.rs  lib.rs  main.rs
ribosome/crates/lysin/src/ops/: deps.rs  info.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  update.rs
ribosome/crates/lysin/tests/: integration.rs
ribosome/crates/ribosome-cli/: Cargo.toml
ribosome/crates/ribosome-cli/src/: main.rs  progress.rs
ribosome/crates/ribosome-core/: Cargo.toml
ribosome/crates/ribosome-core/src/: bootstrap.rs  context.rs  error.rs  executor.rs  lib.rs  mrna_index.rs  profile.rs  progress.rs  source.rs
ribosome/crates/ribosome-core/tests/: e2e_pipeline.rs
ribosome/crates/ribosome-deps/: Cargo.toml
ribosome/crates/ribosome-deps/src/: error.rs  graph.rs  lib.rs
ribosome/crates/ribosome-package/: Cargo.toml
ribosome/crates/ribosome-package/src/: error.rs  lib.rs  packer.rs
ribosome/crates/ribosome-parser/: Cargo.toml
ribosome/crates/ribosome-parser/src/: dependency.rs  error.rs  lib.rs  model.rs  validate.rs  version.rs
ribosome/crates/ribosome-parser/tests/: integration.rs  nucleus_smoke.rs
ribosome/crates/ribosome-parser/tests/fixtures/invalid/: empty-sources.yaml  missing-api-version.yaml  multi-error.yaml  self-dependency.yaml  undefined-feature.yaml
ribosome/crates/ribosome-parser/tests/fixtures/valid/: bash.yaml  full-featured.yaml  minimal.yaml
ribosome/crates/ribosome-repository/: Cargo.toml
ribosome/crates/ribosome-repository/src/: error.rs  index.rs  lib.rs  package_query.rs  repository.rs
ribosome/crates/ribosome-sandbox/: Cargo.toml
ribosome/crates/ribosome-sandbox/src/: btrfs.rs  config.rs  error.rs  lib.rs  rootfs.rs  sandbox.rs
ribosome/crates/ribosome-snapshot/: Cargo.toml
ribosome/crates/ribosome-snapshot/src/: error.rs  lib.rs
ribosome/crates/ribosome-store/: Cargo.toml
ribosome/crates/ribosome-store/src/: digest.rs  error.rs  gc.rs  lib.rs  refs.rs  store.rs
scripts/: dev-setup.sh  fetch-hashes.py
tools/: mirror-sync.sh  qemu-test.sh  ribosome-bootstrap.sh  vm-config.toml
