[workspace]
resolver = "2"
members = [
    "crates/ribosome-cli",
    "crates/ribosome-core",
    "crates/ribosome-parser",
    "crates/ribosome-deps",
    "crates/ribosome-sandbox",
    "crates/ribosome-package",
    "crates/ribosome-repository",
    "crates/ribosome-snapshot",
    "crates/lysin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/lysine-os/lysine-os"
authors = ["LysineOS Team"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10" }
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
petgraph = "0.6"
sha2 = "0.10"
zstd = "0.13"
tar = "0.4"
walkdir = "2.5"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
