[package]
name = "lysin"
description = "Package manager CLI for LysineOS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "lysin"
path = "src/main.rs"

[dependencies]
ribosome-core = { path = "../ribosome-core" }
ribosome-package = { path = "../ribosome-package" }
ribosome-repository = { path = "../ribosome-repository" }
ribosome-snapshot = { path = "../ribosome-snapshot" }
ribosome-deps = { path = "../ribosome-deps" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
