[package]
name = "ribosome-core"
description = "Core build engine for Ribosome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
ribosome-parser = { path = "../ribosome-parser" }
ribosome-package = { path = "../ribosome-package" }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
ribosome-deps = { path = "../ribosome-deps" }
ribosome-repository = { path = "../ribosome-repository" }
