[package]
name = "ribosome-core"
description = "Core build engine for Ribosome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
ribosome-parser = { path = "../ribosome-parser" }
ribosome-package = { path = "../ribosome-package" }
ribosome-sandbox = { path = "../ribosome-sandbox" }
ribosome-store = { path = "../ribosome-store" }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
url = "2"
flate2 = "1"
xz2 = "0.1"
bzip2 = "0.4"
tar = { workspace = true }
zstd = { workspace = true }
walkdir = { workspace = true }
indicatif = "0.18"

[dev-dependencies]
tempfile = "3.14"
ribosome-deps = { path = "../ribosome-deps" }
ribosome-repository = { path = "../ribosome-repository" }
