[package]
name = "ribosome-deps"
description = "Genome dependency graph engine for Ribosome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ribosome-core = { path = "../ribosome-core" }
ribosome-parser = { path = "../ribosome-parser" }
petgraph = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
