[package]
name = "ribosome-package"
description = ".prot package format handling for Ribosome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ribosome-parser = { path = "../ribosome-parser" }
ribosome-store = { path = "../ribosome-store" }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
