[package]
name = "ribosome-parser"
description = "mRNA YAML build recipe parser for Ribosome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
regex = "1.11"
url = "2.5"
spdx = "0.10"

[dev-dependencies]
tempfile = "3.14"
walkdir = "2.5"
