[package]
name = "ribosome-repository"
description = "Nucleus repository management for Ribosome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ribosome-core = { path = "../ribosome-core" }
ribosome-package = { path = "../ribosome-package" }
ribosome-parser = { path = "../ribosome-parser" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
