[package]
name = "ribosome-sandbox"
description = "Membrane build sandbox management for Ribosome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libc = "0.2"  # For statfs to detect Btrfs filesystem

[target.'cfg(not(target_os = "linux"))'.dependencies]
libc = { version = "0.2", optional = true }  # Only needed on Linux

[dev-dependencies]
tempfile = "3.14"
